fixed footer overflow

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -22,7 +22,8 @@
   ul {
     display: flex;
     justify-content: center;
-    gap: 1.5rem;
+    flex-wrap: wrap;
+    gap: 0.5rem 1.5rem;
 
     padding-left: 0;
     list-style-type: none;
